<resources>
    <string name="app_name">MediptaExpert</string>
    <string name="title_activity_expert_dashboard">ExpertDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Shubham</string>
    <string name="nav_header_subtitle">shubham.pulate@medipta.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_expert_profile">My Profile</string>
    <string name="hint_username">Username</string>
    <string name="enter_food_not_allowed">Enter Food Not Allowed</string>
    <string name="tablet_name">Tablet Name</string>
    <string name="tablet_time">Tablet Time</string>
    <string name="water_quantity_in_litre">Water Quantity in Litre</string>
    <string name="package_name">Package Name</string>
    <string name="package_duration_in_months">Package Duration In Months</string>
    <string name="total_calls">Total Calls</string>
    <string name="package_diet_plans">Package Diet Plans</string>
    <string name="total_exercise_plans">Total Exercise Plans</string>
    <string name="package_amount">Package Amount</string>
    <string name="package_description">Package Description</string>
    <string name="item_type">Package Type</string>
    <string name="paid_client">PAID CLIENT</string>
</resources>
